--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy-pages":"ng build --base-href https://acardozo10.github.io/temperature-and-humidity-control/ && npx angular-cli-ghpages --dir=dist/temperature-and-humidity-control"
+    "deploy-pages":"ng build --watch --base-href https://acardozo10.github.io/temperature-and-humidity-control/ && npx angular-cli-ghpages --dir=dist/temperature-and-humidity-control"
   },
   "private": true,
   "dependencies": {
